fixed extra <body> whitespace

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -10,6 +10,7 @@
 body {
 	font-family: Roboto, sans-serif;
 	color: var(--dark);
+	overflow: hidden;
 }
 
 h2 {
